--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
   <body>
     <div class="box js-box">
       <p class="page">Page:<span class="page-number">1</span></p>
+      <p class="page">ццццццццццццццц:<span class="page-number">1</span></p>
       <form class="search-form" id="search-form">
         <input
           class="js-input input"
